# SVisual

./: .gitignore  .gitmodules  .travis.yml  Dockerfile  README.md
src/: CMakeLists.txt
src/MSSetup/: Product.wxs  Setup.wixproj
src/SVArduino/: SVClient.h  sv_auxFunc.h  sv_binTree.h  sv_client.cpp  sv_objClient.h  sv_structurs.h
src/SVAuxFunc/: CMakeLists.txt  Front.h  TimerDelay.h  auxFunc.h  aux_func.h  clientTCP.h  front.h  logger.h  mt_log.h  serverTCP.h  spin_lock.h  tcp_client.h  tcp_server.h  timer_delay.h
src/SVAuxFunc/src/: auxFunc.cpp  aux_func.cpp  clientTCP.cpp  serverTCP.cpp  stdafx.cpp  stdafx.h  tcp_client.cpp  tcp_server.cpp
src/SVBase/: CMakeLists.txt  base.h  sv_limits.h
src/SVBase/src/: base.cpp
src/SVClient/: CMakeLists.txt  SVClient.h
src/SVClient/src/: SVClient.cpp  client.cpp  client.h  dllmain.cpp  stdafx.cpp  stdafx.h
src/SVClientExample/: CMakeLists.txt
src/SVClientExample/src/: 1MHz_example.cpp  main.cpp
src/SVConfig/: CMakeLists.txt  SVConfigData.h  SVConfigLimits.h  config_data.h
src/SVConfig/src/: SVConfigData.cpp  config_data.cpp
src/SVDistrGraphDialog/: CMakeLists.txt  distr_dialog.h
src/SVDistrGraphDialog/src/: distr_dialog.cpp  graph_panel_widget.cpp  graph_panel_widget.h
src/SVDistrGraphPanel/: CMakeLists.txt  distr_panel.h
src/SVDistrGraphPanel/forms/: graph_panel_widget.h  graph_panel_widget.ui  graph_widget.h  graph_widget.ui
src/SVDistrGraphPanel/src/: axis_time_widget.h  axis_value_widget.h  distr_panel.cpp  drag_label.h  graph_panel_widget.cpp  plot_widget.h
src/SVDocker/: CMakeLists.txt
src/SVDocker/src/: main.cpp
src/SVExportDialog/: CMakeLists.txt  export_dialog.h
src/SVExportDialog/forms/: export_dialog.ui  export_dialog_impl.h  export_dialog_impl.ui  ui_export_dialog.h
src/SVExportDialog/resources/: export_dialog_en.ts  export_dialog_resource.qrc
src/SVExportDialog/src/: export_dialog.cpp  export_dialog_impl.cpp
src/SVExportPanel/: CMakeLists.txt  SVExportPanel.h
src/SVExportPanel/forms/: exportPanel.h  exportPanel.ui  ui_exportPanel.h
src/SVExportPanel/resources/: exportresource.qrc  svexportpanel_en.qm  svexportpanel_en.ts  svstatpanel_en.qm
src/SVExportPanel/src/: SVExportPanel.cpp  exportPanel.cpp
src/SVGraphPanel/: CMakeLists.txt  SVGraphPanel.h  graph_panel.h
src/SVGraphPanel/forms/: axisSetting.ui  axisSettingPanel.h  axis_setting_dialog.h  axis_setting_dialog.ui  graphPanel.h  graphPanel.ui  graph_panel_widget.h  graph_panel_widget.ui  graph_widget.h  graph_widget.ui  ui_axisSetting.h  ui_axis_setting_dialog.h  ui_graphPanel.h  ui_graph_panel_widget.h  ui_graph_widget.h  ui_wdgGraph.h  wdgGraph.h  wdgGraph.ui
src/SVGraphPanel/resources/: gpresource.qrc  graph_panel_en.ts  graph_panel_resource.qrc  svgraphpanel_en.qm  svgraphpanel_en.ts
src/SVGraphPanel/src/: SVGraphPanel.cpp  axis_time_widget.cpp  axis_time_widget.h  axis_value_widget.cpp  axis_value_widget.h  distr_graph_panel_widget.cpp  dragLabel.cpp  dragLabel.h  drag_label.cpp  drag_label.h  graphPanel.cpp  graph_panel.cpp  graph_panel_widget.cpp  graph_widget.cpp  marker_widget.cpp  marker_widget.h  plot_widget.cpp  plot_widget.h  stdafx.h  wdgAxisTime.cpp  wdgAxisTime.h  wdgAxisValue.cpp  wdgAxisValue.h  wdgGraph.cpp  wdgMarker.cpp  wdgMarker.h  wdgPlot.cpp  wdgPlot.h
src/SVMisc/: CMakeLists.txt  front.h  logger.h  misc.h  spin_lock.h  tcp_client.h  tcp_server.h  timer_delay.h
src/SVMisc/src/: aux_func.cpp  tcp_client.cpp  tcp_server.cpp
src/SVMonitor/: CMakeLists.txt
src/SVMonitor/forms/: eventOrderWin.h  eventOrderWin.ui  event_table_dialog.h  event_table_dialog.ui  graphSetting.ui  graphSettingPanel.h  graph_setting_dialog.h  graph_setting_dialog.ui  main_win.h  main_win.ui  mainwin.h  mainwin.ui  script_dialog.h  script_dialog.ui  settingsPanel.h  settingsPanel.ui  settings_dialog.h  settings_dialog.ui  signScriptPanel.h  signScriptPanel.ui  subscript_dialog.h  subscript_dialog.ui  triggerPanel.h  triggerPanel.ui  ui_graphSetting.h  ui_mainwin.h  ui_settingsPanel.h  ui_signScriptPanel.h
src/SVMonitor/resources/: export_dialog_en.qm  graph_panel_en.qm  resource.aps  resource.qrc  resource.rc  script_dialog_en.qm  svmonitor_en.qm  svmonitor_en.ts  trigger_dialog_en.qm
src/SVMonitor/src/: comReader.cpp  comReader.h  com_reader.cpp  com_reader.h  dbProvider.cpp  dbProvider.h  db_provider.cpp  db_provider.h  eventOrderWin.cpp  event_table_dialog.cpp  graphSettingPanel.cpp  graph_setting_dialog.cpp  main.cpp  main_win.cpp  mainwin.cpp  resource.h  serverAPI.cpp  serverAPI.h  server_api.cpp  server_api.h  settingsPanel.cpp  settings_dialog.cpp  sql.cpp  sql.h  stdafx.h  structurs.h  subscript_dialog.cpp  treeWidgetExt.cpp  treeWidgetExt.h  tree_widget.cpp  tree_widget.h  triggerPanel.cpp
src/SVScriptDialog/: CMakeLists.txt  script_dialog.h
src/SVScriptDialog/forms/: script_dialog.ui  script_dialog_impl.h  ui_script_dialog.h
src/SVScriptDialog/resources/: script_dialog_en.qm  script_dialog_en.ts  script_dialog_resource.qrc
src/SVScriptDialog/src/: script_dialog.cpp  script_dialog_impl.cpp
src/SVScriptPanel/: CMakeLists.txt  SVScriptPanel.h
src/SVScriptPanel/forms/: scriptPanel.h  scriptPanel.ui  ui_scriptPanel.h
src/SVScriptPanel/resources/: svscriptpanel_en.ts  svscriptresource.qrc
src/SVScriptPanel/src/: SVScriptPanel.cpp  scriptPanel.cpp  wdgScriptPanel.cpp  wdgScriptPanel.h
src/SVServer/: CMakeLists.txt  SVServer.h  server.h  sv_server.h
src/SVServer/src/: SVServer.cpp  archive.cpp  archive.h  bufferData.cpp  bufferData.h  buffer_data.cpp  buffer_data.h  clickhouse_db.cpp  clickhouse_db.h  dllmain.cpp  server.cpp  server.h  sharedFunc.h  stdafx.h  (+8 more)
src/SVStatDialog/: CMakeLists.txt  stat_dialog.h
src/SVStatPanel/: CMakeLists.txt  SVStatPanel.h
src/SVTriggerDialog/: CMakeLists.txt  trigger_dialog.h
src/SVTriggerPanel/: CMakeLists.txt  SVTriggerPanel.h
src/SVViewer/: CMakeLists.txt
src/SVWebServer/: CMakeLists.txt  SVWebServer.h  web_server.h
src/SVWriterExample/: CMakeLists.txt
src/SVZabbix/: CMakeLists.txt  SVZabbix.h  zabbix.h
src/cmake/: mswin.cmake  qt.cmake
(+277 files in other folders)
